fix menu overlap + get feature style lable + add buffer to get feature for polygon

--- a/geonode/geoviz/static/mapMyDrone/css/mapMyPlace.css
+++ b/geonode/geoviz/static/mapMyDrone/css/mapMyPlace.css
@@ -260,3 +260,15 @@ div.dataTables_wrapper div.dataTables_info {
    margin-right: 5px !important;
   }
 /* driverjs css end */
+
+
+
+
+
+.modal {
+
+  position: fixed; /* or 'absolute' if the parent is positioned */
+  top: 20%;
+  left: 50%;
+ 
+}
